ansible/deployment.yaml
# 1) BACKEND Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: adityaav80/backend-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9009
---
# 2) BACKEND ClusterIP Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9009       # the port other pods use
      targetPort: 9009 # container’s listening port
  type: ClusterIP  # Expose only inside the cluster

---
# 3) FRONTEND Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: adityaav80/frontend-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
# 4) FRONTEND Service (NodePort for external access)
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
      nodePort: 31723  # Expose frontend via NodePort for access from outside the cluster
  type: NodePort  # Expose frontend to the outside world
